   [suggested by Niko]
May 7, 2000
 - Makefile.vc improvements from Balazs Kelemen
May 19,2000
 - fixed <Ctrl-H> in text editor
------ omnetpp-2.0b4 released ------
------ omnetpp-2.0b5 released ------
July 17, 2000
 - accepts NED files on the command line
July 26, 2000
 - minor fixes on Edit|Find
Aug 7, 2000
 - makefile changes for RPM support
Aug 26, 2000
 - added .gnedrc
 - find/replace operation improved
 - implemented "find next"
 - find/replace dialog contents is now preserved
 - open/save dialogs now remember the directory
Aug 27, 2000
 - drag&drop creation of submodules now creates unique names (changed addItem,
   renameItem procs)
 - deleteItem proc improved
 - renaming improved; "rename..." added to canvas popup menu
Aug 29, 2000
 - command-line arg handling improved
Sep 30, 2000
 - improvement just for Cygwin: lexer now explicitly ignores '\r' (=CR) chars
Nov 14-19, 2000
 - display string handling rewritten. Now GNED won't delete from the
   display strings the tags it doesn't understand. New file: dispstr.tcl.
 - experimental XML support: GNED can now export and import XML files.
   (File|Import XML...,Export XML... menu items)
   Requires the TclXML package, at least version 1.2. (The contents of
   TclXML-1.2.tgz should be extracted under the tcl/lib/Tcl8.x directory.)
   New files: genxml.tcl, parsexml.tcl.
   BUG in the TclXML-1.2 parser: it silently discards attributes which contain
   '&' or '<' characters!!!!
Nov 19, 2000
 - bugfix: removed bogus asserts around parsened.cc#70 and #140 which caused the
   program to abort when NED code contained two submodules with the
   same name when switching from text to graphics.
Nov 20, 2000
 - improvement: File|Close and File|Exit made more graceful -- the "Not saved,
   save?" dialog now has a Cancel button
 - improvement: implemented File|Save all
 - bugfix: new submodules, modules, channels etc. now always get unique names
TODO:
  delete disp str class from source

