@@ -47,9 +47,8 @@ proc generateXML {key} {
     update_displaystrings $key
 
     set xml ""
-    append xml "<!-- XML file format for NED is currently ***EXPERIMENTAL*** -->\n"
     append xml "<?xml version=\"1.0\" ?>\n"
-    append xml "<!doctype system=\"ned1.dtd\">\n\n"
+    append xml "<!-- XML file format for NED is currently ***EXPERIMENTAL*** -->\n"
 
     append xml [generateXMLElement $key ""]
     return $xml
